# Generate-.whl-using-.toml-poetry-

./: README.md  pyproject.toml  requirement.txt  setup.cfg
PyProject/: __init__.py
PyProject.egg-info/: PKG-INFO  SOURCES.txt
